byteForge/src/styles/common/scrollToTop.scss
@use "@/styles/mixins/mixins" as m;
@use "@/styles/variables" as v;

.scroll-to-top-btn {
    position: fixed;
    top: 85%;
    right: 2rem;

    @include m.flexCenter;

    padding: 1rem;

    border-radius: 100%;

    background-color: v.$accent-hover;

    transition: top 0.3s ease;

    svg {
        width: 1.5rem;
        height: 1.5rem;

        color: white;
    }

    &.at-bottom {
        top: 75%;
    }

    @media (min-width: v.$desktop) {
        top: 85%;
        right: 3rem;

        &.at-bottom {
            top: 75%;
        }
    }
}

